# ChangeLog for games-board/ggz-gtk-client
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-board/ggz-gtk-client/ChangeLog,v 1.16 2007/02/22 14:52:50 nyhm Exp $

*ggz-gtk-client-0.0.14 (22 Feb 2007)

  22 Feb 2007; Tristan Heaven <nyhm@gentoo.org>
  +ggz-gtk-client-0.0.14.ebuild:
  Version bump

  11 Oct 2006; Tristan Heaven <nyhm@gentoo.org>
  +files/ggz-gtk-client-0.0.13-gaim.patch, ggz-gtk-client-0.0.13.ebuild:
  Add gaim use flag and fix install paths

  18 Jul 2006; Michael Hanselmann <hansmi@gentoo.org>
  ggz-gtk-client-0.0.13.ebuild:
  Stable on ppc.

  10 Jul 2006; Stephanie Lockwood-Childs <wormo@gentoo.org>
  ggz-gtk-client-0.0.9.ebuild:
  stable on ppc (Bug #138482)

  07 Jul 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  ggz-gtk-client-0.0.13.ebuild:
  Stable on x86 wrt bug #138482. Marked -amd64 and removed ~sparc for the same
  bug.

  24 Mar 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  ggz-gtk-client-0.0.13.ebuild:
  Modifed to install the .desktop file into the correct location.

*ggz-gtk-client-0.0.13 (24 Mar 2006)

  24 Mar 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  +ggz-gtk-client-0.0.13.ebuild:
  Version bumped to 0.0.13 and closing bug #94366.

  24 Mar 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  ggz-gtk-client-0.0.9.ebuild:
  Added ibiblio mirror and closing bug #87288.

  20 Sep 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  ggz-gtk-client-0.0.9.ebuild:
  Removed gtk2 flag per bug #106560.

  15 Jun 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  ggz-gtk-client-0.0.9.ebuild:
  Removed INSTALL file.

  28 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

*ggz-gtk-client-0.0.9 (26 Dec 2004)

  26 Dec 2004; Mike Frysinger <vapier@gentoo.org>
  +files/0.0.9-duplicate-prototypes.patch, -ggz-gtk-client-0.0.7.ebuild,
  +ggz-gtk-client-0.0.9.ebuild:
  Version bump #69432 by Bryan Duff.
