@@ -1,4 +1,16 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
+DIST ggz-gtk-client-0.0.14.1.tar.gz 986230 RMD160 65f8f476da0e706208e4c42fd8889760a87802ee SHA1 066a2e0d5f913f3f65a3c44005d012bce74fb7c7 SHA256 414c69f41a786c685f42cc2834cc426578d5b24ea75fce5769ee3b9712e1b82e
 DIST ggz-gtk-client-0.0.14.tar.gz 778470 RMD160 7ff4edf93fd4a8a3b6e028bf9da73ccdfdedab3d SHA1 a84ac23e86347e9ce9bf87bff185b931ff5813d6 SHA256 790f7db17e252e02c07f68cbdda3de071945e284582edd1c5b21891e568c6cff
+EBUILD ggz-gtk-client-0.0.14.1.ebuild 599 RMD160 3d47c90bc84a46cd5f482596f55101ba12dcee14 SHA1 1c9162fa715130fa79abb4d712ba00853ad32bb6 SHA256 989bd9f2d670c09a2f3ccb6e884b75da655d08fe758b1bdc339069b9637046ff
 EBUILD ggz-gtk-client-0.0.14.ebuild 687 RMD160 187c352acbb4196cce97949b8a9ceaa5e1c2d101 SHA1 b80869b37efdf3e27abb8a79893e008466f7eda2 SHA256 8fdc8fb41fe5494900ff8cccf26440c671bf3c58c1f409bd42245d8fe747bddd
-MISC ChangeLog 2653 RMD160 6df462a02d407e7fcc9ba898a8fd253282c1677e SHA1 b8c8e2a8f990aeb52c187c2bd65627bc92c28de2 SHA256 96ea2ccb2ba621a2bb97d5110a76b9cef92dcb490f09c71d0d8bea9917090439
+MISC ChangeLog 2792 RMD160 12c74f03c608c4189412912d99dbaa0af2ede0a0 SHA1 911112594fa229018bad075413c506b47d7dcd34 SHA256 817223d96ada0f9d08ed6fdd251aebc70be4b8849be4255dd69ad9d18289f65d
 MISC metadata.xml 158 RMD160 cbd9984bb6b426c8c9cee5022fe0a26261612fea SHA1 be5251fa1dacef5c41b74761bb1c8c54fb633b9e SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.7 (GNU/Linux)
+
+iD8DBQFHubIOdz7hIScOURERAu//AJ9rDKLPKzS2J5sLw6SoULjoYvunxQCeLLnj
+g35r2xAudcDdYuXQK4A1S9g=
+=8mv7
+-----END PGP SIGNATURE-----
