@@ -1,6 +1,12 @@
 # ChangeLog for games-board/ggz-gtk-client
-# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-board/ggz-gtk-client/ChangeLog,v 1.16 2007/02/22 14:52:50 nyhm Exp $
+# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-board/ggz-gtk-client/ChangeLog,v 1.17 2008/02/18 16:27:52 nyhm Exp $
+
+*ggz-gtk-client-0.0.14.1 (18 Feb 2008)
+
+  18 Feb 2008; Tristan Heaven <nyhm@gentoo.org>
+  +ggz-gtk-client-0.0.14.1.ebuild:
+  Version bump
 
 *ggz-gtk-client-0.0.14 (22 Feb 2007)
 
